Contiune with update

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class"left-nav">
-        <a href="#" class="nav" id="About">About</a>
+       <div id="about"><a href="b.about" class="nav" id="About">About</a></div>
         <a href="#" class="nav" id="Projects">Progress</a>
         <a href="#" class="nav" id="Contact">Contact</a>
     </div>
@@ -22,7 +22,7 @@
 
     <!-- About Section -->
     <section class="section-b">
-        <h2>About Me</h2>
+            <h2 id="b.about">About Me</h2>
         <p>I love to problem solve. It's why I became an engineer. Getting to resolve an issue that has be bothering you for weeks is exhilarating. I also love circuits, computers and design. Thankfully all of these passions can fit really nicely together and you end up with a talented person like me! I am what many would call a maker (since hacker has a bit of a bad rep). I have a desire to learn and fix what I deam broken. My hobbies have an awesome place in the world and I obsessively want to become an expert in all of them and learn new ones on the way. I don't know what life will bring me but I guarentee I will always be learning.</p>
     </section>
 
