Still messing with syntax and design

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="background-img"></div>
     <div class"left-nav">
        <div id="about"><a href="b.about" class="nav" id="About">About</a></div>
         <a href="#" class="nav" id="Projects">Progress</a>
@@ -16,14 +17,19 @@
     <!-- Head Section -->
     <section class="section-a">
         <h1>HI!</h1>
+        <div id="logo"></div>
         <h1>I'm Neil</h1>
         <p>Passionate, Creative Engineering</p>
+        <p class="scroll_more">Scroll To Learn More</p>
     </section>
 
     <!-- About Section -->
     <section class="section-b">
             <h2 id="b.about">About Me</h2>
         <p>I love to problem solve. It's why I became an engineer. Getting to resolve an issue that has be bothering you for weeks is exhilarating. I also love circuits, computers and design. Thankfully all of these passions can fit really nicely together and you end up with a talented person like me! I am what many would call a maker (since hacker has a bit of a bad rep). I have a desire to learn and fix what I deam broken. My hobbies have an awesome place in the world and I obsessively want to become an expert in all of them and learn new ones on the way. I don't know what life will bring me but I guarentee I will always be learning.</p>
+
+        <h2>Ok but what about the basic stuff?</h2>
+        <p>Sure! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum fugit quasi veritatis qui eligendi porro odio est iste alias quibusdam vel, voluptatem repellat voluptate tempora nobis libero perspiciatis sint. Quia!</p>
     </section>
 
     <a href="#" class="btn">Check Out My Progress!</a>
@@ -32,8 +38,21 @@
     <section class="section-c">
         <h2>Progress...</h2>
         <p>It's progress because none of my projects are ever really done. They are all about experimenting with new ideas and techniques so I can use what I have learned on new and future projects.</p>
-        <div><img src="/img/arduino.png" alt=""></div>
-        <div><img src="/img/raspberry-pi.png" alt=""></div>
+        <div class="projects" id="project1">
+            <div class="image1"></div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt vero error, omnis ratione quo nihil?</p>
+        </div>
+        <div class="projects" id="project2">
+            <div class="image1"></div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt vero error, omnis ratione quo nihil?</p>
+        </div>
+        <div class="projects" id="project3">
+            <div class="image1"></div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt vero error, omnis ratione quo nihil?</p>
+        </div>
+        <div class="skills-chart"></div>
+        <div><img id="arduino" src="/img/arduino.png" alt=""></div>
+        <div><img id="raspberry" src="/img/raspberry-pi.png" alt=""></div>
         
     </section>
 
