--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio of Neil</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js"></script>
+    <!-- <link href="anime.css" rel="stylesheet"> -->
     <script src="file.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.js"></script>
 </head>
 <body>
     <div class="wrapper">
         <header>
-            <div id="logo"></div>
+            <img src="img/websiteLogo.png" alt="N logo">
             <h1>HI!</h1>
             <h2>I'm Neil</h2>
             <h3>Welcome To My Site</h3>
