Changed logo a bit

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="wrapper">
         <header>
-            <img src="img/websiteLogo.png" alt="N logo">
+            <img src="img/websiteLogo3.png" alt="N logo">
             <h1>HI!</h1>
             <h2>I'm Neil</h2>
             <h3>Welcome To My Site</h3>
