fixed animation so it stays centered and added more pages. Also made text more responsive

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h2 class="title">I'm Neil</h2>
                 <h3 class="title">Welcome To My Site</h3>
                 <!-- <div id="line"></div> -->
-                <h3 class="title">Scroll Down To Learn More</h3>
+                <h3 class="title">Scroll To Learn More</h3>
             </div>
         </header>
 
@@ -65,7 +65,7 @@
 
         <footer>
             <a href="https://github.com/nachogames" target="_blank" rel="noopener">GitHub</a>
-            <a href="https://www.linkedin.com/in/neilmceachin/">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/neilmceachin/" target="_blank" rel="noopener">LinkedIn</a>
             <p>Thanks for visiting. Come back any time :)</p>
         </footer>
     </div>
