added parts of skills section and made more fonts scalable

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- Style Links -->
     <link rel="stylesheet" href="css/style.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 
     <!-- animations -->
     <script src="js/anime.js"></script>
@@ -47,9 +48,45 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio laborum aliquid inventore vitae dicta, officia aperiam nemo nulla? Beatae alias dicta adipisci eum perspiciatis, amet tempore sapiente illum, obcaecati voluptates accusamus ratione quia cumque facere laboriosam vero magnam mollitia quam!
                 </p>
             </div>
-            <!-- <section id="skills">
-
-            </section> -->
+            <section id="skills">
+                <ul class="skill-list">
+                    <li class="skill">
+                        <div class="container">
+                            <div class="skl" id="java"></div>
+                        </div>
+                        <div class="container">
+                            <div class="skl" id="c"></div>
+                            <div>C</div>
+                        </div>
+                        <div class="container">
+                            <div class="skl" id="javascript"></div>
+                        </div>
+                        <div class="container">
+                            <div class="skl" id="perl"></div>
+                        </div>
+                        <div class="container">
+                            <div class="skl" id="html-css"></div>
+                        </div>
+                    </li>
+                    <li class="skill">
+                        <div class="container">
+                            <div class="skl" id="photoshop"></div>
+                        </div>
+                        <div class="container">
+                            <div class="skl" id="illustrator"></div>
+                        </div>
+                        <div class="container">
+                            <div class="skl" id="after-effects"></div>
+                        </div>
+                        <div class="container">
+                            <div class="skl" id="nx"></div>
+                        </div>
+                        <div class="container">
+                            <div class="skl" id="blender"></div>
+                        </div>
+                    </li>
+                </ul>
+            </section>
             <div class="clear"></div>
         </div>
         <div id="progress">
@@ -80,16 +117,28 @@
         </div>
 
         <div id="contact">
-            <p class="intro">LETS TALK!</p>
-            <p class="intro">JUST SEND ME AN EMAIL AT:</p>
+            <p class="intro" id="lets">LETS TALK!</p>
+            <p class="intro" id="just">JUST SEND ME AN EMAIL AT:</p>
             <p class="email">NJMCEACH</p>
             <p class="email">@MTU.EDU</p>
         </div>
 
         <footer>
-            <a href="https://github.com/nachogames" target="_blank" rel="noopener">GitHub</a>
-            <a href="https://www.linkedin.com/in/neilmceachin/" target="_blank" rel="noopener">LinkedIn</a>
-            <p>Thanks for visiting. Come back any time :)</p>
+            <span>
+                <a href="https://github.com/nachogames" target="_blank" rel="noopener" id="github">
+                    <i class="fab fa-github"></i>
+                </a>
+            </span>
+            <span class="thanks">
+                Thanks for visiting. Come back any time
+            </span>
+            <span class="smile" id="eyes">:</span>
+            <span class="smile">)</span>
+            <span>
+                <a href="https://www.linkedin.com/in/neilmceachin/" target="_blank" rel="noopener" id="linkedin">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+            </span>
         </footer>
 </body>
 </html>
