--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Portfolio of Neil</title>
+    <title>A Portfolio By Neil</title>
+    <link rel="shortcut icon" href="img/websiteIcon.png">
 
     <!-- Style Links -->
     <link rel="stylesheet" href="css/style.css">
